@@ -3,9 +3,11 @@ AM_LDFLAGS = @LIBSYNCE_LIBS@
 
 INCLUDES = -I$(top_srcdir)/src
 
-##noinst_PROGRAMS = CeRapiInvoke
+noinst_PROGRAMS = CeRapiInvoke
 
-##CeRapiInvoke_SOURCES = CeRapiInvoke.cc ../../tools/pcommon.c
-##CeRapiInvoke_LDADD = ../../src/librapi.la
+CeRapiInvoke_SOURCES = CeRapiInvoke.cc ../../tools/pcommon.c
+CeRapiInvoke_LDADD = ../../src/librapi.la
 
 ##TESTS = CeRapiInvoke
+
+SUBDIRS = dll
